-
Bug
-
-
Minor
-
Resolution:
Fixed
-
N/A
-
-
-
Errors ER_VERSIONING_REQUIRED and ER_VERS_NOT_VERSIONED seem to have the same semantics, maybe there is no need to have both.
$ /data/bld/bb-10.3-temporal/bin/perror 4129
|
MySQL error code 4129 (ER_VERS_NOT_VERSIONED): Table %`s is not versioned
|
|
$ /data/bld/bb-10.3-temporal/bin/perror 4106
|
MySQL error code 4106 (ER_VERSIONING_REQUIRED): System Versioning required: %s
|
{"report":{"fcp":899.0999999046326,"ttfb":136.39999985694885,"pageVisibility":"visible","entityId":64862,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"cfe7cc57-fc11-49c3-bf7c-dc8fa4c1de13","navigationType":0,"readyForUser":948.0999999046326,"redirectCount":0,"resourceLoadedEnd":1223,"resourceLoadedStart":141,"resourceTiming":[{"duration":318.7999999523163,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":141,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":141,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":459.7999999523163,"responseStart":0,"secureConnectionStart":0},{"duration":318.5,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":141.29999995231628,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":141.29999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":459.7999999523163,"responseStart":0,"secureConnectionStart":0},{"duration":327.40000009536743,"initiatorType":"script","name":"https://jira.mariadb.org/s/fbf975c0cce4b1abf04784eeae9ba1f4-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":141.39999985694885,"connectEnd":141.39999985694885,"connectStart":141.39999985694885,"domainLookupEnd":141.39999985694885,"domainLookupStart":141.39999985694885,"fetchStart":141.39999985694885,"redirectEnd":0,"redirectStart":0,"requestStart":141.39999985694885,"responseEnd":468.7999999523163,"responseStart":468.7999999523163,"secureConnectionStart":141.39999985694885},{"duration":352,"initiatorType":"script","name":"https://jira.mariadb.org/s/099b33461394b8015fc36c0a4b96e19f-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":141.5,"connectEnd":141.5,"connectStart":141.5,"domainLookupEnd":141.5,"domainLookupStart":141.5,"fetchStart":141.5,"redirectEnd":0,"redirectStart":0,"requestStart":141.5,"responseEnd":493.5,"responseStart":493.5,"secureConnectionStart":141.5},{"duration":355.59999990463257,"initiatorType":"script","name":"https://jira.mariadb.org/s/94c15bff32baef80f4096a08aceae8bc-CDN/lu2bu7/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":141.59999990463257,"connectEnd":141.59999990463257,"connectStart":141.59999990463257,"domainLookupEnd":141.59999990463257,"domainLookupStart":141.59999990463257,"fetchStart":141.59999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":141.59999990463257,"responseEnd":497.19999980926514,"responseStart":497.19999980926514,"secureConnectionStart":141.59999990463257},{"duration":355.80000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":141.69999980926514,"connectEnd":141.69999980926514,"connectStart":141.69999980926514,"domainLookupEnd":141.69999980926514,"domainLookupStart":141.69999980926514,"fetchStart":141.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":141.69999980926514,"responseEnd":497.5,"responseStart":497.5,"secureConnectionStart":141.69999980926514},{"duration":356.60000014305115,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2bu7/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":141.89999985694885,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":141.89999985694885,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":498.5,"responseStart":0,"secureConnectionStart":0},{"duration":356,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":141.89999985694885,"connectEnd":141.89999985694885,"connectStart":141.89999985694885,"domainLookupEnd":141.89999985694885,"domainLookupStart":141.89999985694885,"fetchStart":141.89999985694885,"redirectEnd":0,"redirectStart":0,"requestStart":141.89999985694885,"responseEnd":497.89999985694885,"responseStart":497.89999985694885,"secureConnectionStart":141.89999985694885},{"duration":356.2999999523163,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":142,"connectEnd":142,"connectStart":142,"domainLookupEnd":142,"domainLookupStart":142,"fetchStart":142,"redirectEnd":0,"redirectStart":0,"requestStart":142,"responseEnd":498.2999999523163,"responseStart":498.2999999523163,"secureConnectionStart":142},{"duration":356.7000000476837,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":142.09999990463257,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":142.09999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":498.7999999523163,"responseStart":0,"secureConnectionStart":0},{"duration":356.60000014305115,"initiatorType":"script","name":"https://jira.mariadb.org/s/3339d87fa2538a859872f2df449bf8d0-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":142.19999980926514,"connectEnd":142.19999980926514,"connectStart":142.19999980926514,"domainLookupEnd":142.19999980926514,"domainLookupStart":142.19999980926514,"fetchStart":142.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":142.19999980926514,"responseEnd":498.7999999523163,"responseStart":498.7999999523163,"secureConnectionStart":142.19999980926514},{"duration":630.7000000476837,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":147.69999980926514,"connectEnd":147.69999980926514,"connectStart":147.69999980926514,"domainLookupEnd":147.69999980926514,"domainLookupStart":147.69999980926514,"fetchStart":147.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":147.69999980926514,"responseEnd":778.3999998569489,"responseStart":778.3999998569489,"secureConnectionStart":147.69999980926514},{"duration":1075.2000000476837,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":147.79999995231628,"connectEnd":147.79999995231628,"connectStart":147.79999995231628,"domainLookupEnd":147.79999995231628,"domainLookupStart":147.79999995231628,"fetchStart":147.79999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":147.79999995231628,"responseEnd":1223,"responseStart":1223,"secureConnectionStart":147.79999995231628},{"duration":415.69999980926514,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":699,"connectEnd":699,"connectStart":699,"domainLookupEnd":699,"domainLookupStart":699,"fetchStart":699,"redirectEnd":0,"redirectStart":0,"requestStart":699,"responseEnd":1114.6999998092651,"responseStart":1114.6999998092651,"secureConnectionStart":699}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":15,"responseStart":137,"responseEnd":146,"domLoading":140,"domInteractive":1241,"domContentLoadedEventStart":1241,"domContentLoadedEventEnd":1272,"domComplete":1961,"loadEventStart":1961,"loadEventEnd":1963,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":1226.1999998092651},{"name":"bigPipe.sidebar-id.end","time":1226.8999998569489},{"name":"bigPipe.activity-panel-pipe-id.start","time":1227.0999999046326},{"name":"bigPipe.activity-panel-pipe-id.end","time":1229.2999999523163},{"name":"activityTabFullyLoaded","time":1276.5999999046326}],"measures":[],"correlationId":"9c5a3d1ef70e54","effectiveType":"4g","downlink":10,"rtt":0,"serverDuration":65,"dbReadsTimeInMs":9,"dbConnsTimeInMs":16,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}