MDEV-14676 Redundancy in error codes

ER_VERS_NOT_VERSIONED vs ER_VERSIONING_REQUIRED